# kea-system-integration

./: .gitignore  README.md
SI_00_classroom/SI_00_iframe/: README.md  me.csv  me.json  me.txt  me.xml  me.yaml  paymentiframe.html
SI_00_classroom/SI_multipart_form/: index.html  main.py  nestedForms.html  pyproject.toml
SI_01a_data_parsing_server_I/: README.md  pom.xml
SI_01a_data_parsing_server_I/src/main/java/: Main.java  (+2 more)
SI_03a_data_parsing_server_II/: README.md
SI_03a_data_parsing_server_II/resources/: me.xml
SI_03a_data_parsing_server_II/snake-server/: DataParser.py
SI_03a_data_parsing_server_III/: README.md
SI_03a_data_parsing_server_III/coffee-server/: pom.xml
SI_03a_data_parsing_server_III/resources/: me.csv
SI_03a_data_parsing_server_III/snake-server/: Person.py  PersonDataAPI.py  pyproject.toml
SI_04a_sse_example/: README.md  pom.xml
SI_04b_database_granular_access/: README.md
SI_05a_expose_and_integrate_with_a_webhook_system/: pom.xml
SI_06a_create_openapi_documentation/: README.md
SI_06a_websocket/: README.md  client.py  server.py
SI_08a_database_documentation/: README.md
SI_08a_webrtc/: README.md
SI_08b_code_documentation/: README.md
SI_08b_database_migration/: README.md
SI_08d_code_documentation/: README.md
SI_10a_database_documentation/: dogeverse.sql  schema-dogeverse-Dog-mongoDBJSON.json
SI_11b_payment_integration/: README.md  pom.xml
SI_12a_expose_and_integrate_with_a_webhook_system/: README.md  pom.xml
SI_12a_expose_and_integrate_with_a_webhook_system/exposee/: pom.xml
SI_13a_graphql/: README.md  pom.xml
(+76 files in other folders)
